--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,76 @@
-Flask==3.1.2
-ultralytics==8.4.11
-matplotlib==3.10.8
+blinker==1.9.0
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.3.1
+contourpy==1.3.3
+cuda-bindings==12.9.4
+cuda-pathfinder==1.3.3
+cycler==0.12.1
+defusedxml==0.7.1
 easyocr==1.7.2
+filelock==3.20.3
+Flask==3.1.2
+Flask-WTF==1.2.2
+fonttools==4.61.1
+fsspec==2026.1.0
+gunicorn==25.0.1
+idna==3.11
+ImageIO==2.37.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+kiwisolver==1.4.9
+lazy_loader==0.4
+MarkupSafe==3.0.3
+matplotlib==3.10.8
+mpmath==1.3.0
+networkx==3.6.1
+ninja==1.13.0
+numpy==2.4.2
+nvidia-cublas-cu12==12.8.4.1
+nvidia-cuda-cupti-cu12==12.8.90
+nvidia-cuda-nvrtc-cu12==12.8.93
+nvidia-cuda-runtime-cu12==12.8.90
+nvidia-cudnn-cu12==9.10.2.21
+nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile-cu12==1.13.1.3
+nvidia-curand-cu12==10.3.9.90
+nvidia-cusolver-cu12==11.7.3.90
+nvidia-cusparse-cu12==12.5.8.93
+nvidia-cusparselt-cu12==0.7.1
+nvidia-nccl-cu12==2.27.5
+nvidia-nvjitlink-cu12==12.8.93
+nvidia-nvshmem-cu12==3.4.5
+nvidia-nvtx-cu12==12.8.90
 opencv-python==4.13.0.90
+opencv-python-headless==4.13.0.90
+packaging==26.0
+pillow==12.1.0
+polars==1.38.0
+polars-runtime-32==1.38.0
+psutil==7.2.2
+pyclipper==1.4.0
+pyparsing==3.3.2
+python-bidi==0.6.7
+python-dateutil==2.9.0.post0
+PyYAML==6.0.3
+requests==2.32.5
+scikit-image==0.26.0
+scipy==1.17.0
+setuptools==80.10.2
+shapely==2.1.2
+six==1.17.0
 supervision==0.27.0
+sympy==1.14.0
+tifffile==2026.1.28
+tk==0.1.0
 torch==2.10.0
+torchaudio==2.10.0+cpu
 torchvision==0.25.0
-
+tqdm==4.67.3
+triton==3.6.0
+typing_extensions==4.15.0
+ultralytics==8.4.11
+ultralytics-thop==2.0.18
+urllib3==2.6.3
+Werkzeug==3.1.5
+WTForms==3.2.1
